inclde index=False to_csv

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
     "\n",
     "shape = shape.loc[:,cols].rename(columns=cols_dict)\n",
     "\n",
-    "shape.to_csv('2023-05-19_shapes.csv')"
+    "shape.to_csv('2023-05-19_shapes.csv', index=False)"
    ]
   },
   {
