redo this for area type ids 102, 66 and 219

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,23 +490,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shape_file</th>\n",
+       "      <th>code_field</th>\n",
+       "      <th>name_field</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ICB_JUL_2022_EN_BUC_V3.csv</td>\n",
+       "      <td>properties.ICB22CD</td>\n",
+       "      <td>properties.ICB22NM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv</td>\n",
+       "      <td>properties.STP21CD</td>\n",
+       "      <td>properties.STP21NM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>STP_Apr_2019_GCB_in_England_2022.csv</td>\n",
+       "      <td>properties.stp19cd</td>\n",
+       "      <td>properties.stp19nm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Regions_December_2022_EN_BUC.csv</td>\n",
+       "      <td>properties.RGN22CD</td>\n",
+       "      <td>properties.RGN22NM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SICBL_JUL_2022_EN_BUC_2975071620781705857.csv</td>\n",
+       "      <td>SICBL22CD</td>\n",
+       "      <td>SICBL22NM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                     shape_file  \\\n",
+       "0                                                    ICB_JUL_2022_EN_BUC_V3.csv   \n",
+       "1  Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv   \n",
+       "2                                          STP_Apr_2019_GCB_in_England_2022.csv   \n",
+       "3                                              Regions_December_2022_EN_BUC.csv   \n",
+       "4                                 SICBL_JUL_2022_EN_BUC_2975071620781705857.csv   \n",
+       "\n",
+       "           code_field          name_field  \n",
+       "0  properties.ICB22CD  properties.ICB22NM  \n",
+       "1  properties.STP21CD  properties.STP21NM  \n",
+       "2  properties.stp19cd  properties.stp19nm  \n",
+       "3  properties.RGN22CD  properties.RGN22NM  \n",
+       "4           SICBL22CD           SICBL22NM  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = code_and_name_fields('shapes')\n",
-    "# data.to_csv('2023-05-19_shape_code_and_name_fields.csv', index=False)\n",
-    "# data"
+    "# data.to_csv('2023-08-10_shape_code_and_name_fields.csv', index=False)\n",
+    "# data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def append_shapes(folder_name):\n",
-    "    shape_fields = pd.read_csv('2023-05-19_shape_code_and_name_fields.csv')\n",
+    "    shape_fields = pd.read_csv('2023-08-10_shape_code_and_name_fields.csv')\n",
     "    \n",
     "    appended_shapes = pd.DataFrame()\n",
     "    \n",
@@ -532,11 +614,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# append_shapes('shapes').to_csv('shapes/2023-05-19_shapes_appended.csv', index=False)"
+    "append_shapes('shapes').to_csv('shapes/2023-08-10_shapes_appended.csv', index=False)"
    ]
   },
   {
@@ -554,13 +636,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "shape = pd.read_csv('shapes/2023-05-19_shapes_appended.csv')\n",
+    "shape = pd.read_csv('shapes/2023-08-10_shapes_appended.csv')\n",
     "cols = ['geometry.coordinates', 'area_code', 'area_type_id']\n",
     "cols_dict = {'geometry.coordinates': 'shape'}\n",
     "\n",
     "shape = shape.loc[:,cols].rename(columns=cols_dict)\n",
     "\n",
-    "shape.to_csv('2023-05-19_shapes.csv', index=False)"
+    "shape.to_csv('2023-08-10_shapes.csv', index=False)"
    ]
   },
   {
