extract shape data for 66 and 102 and resave

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,29 +229,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "sub_icb_shape_directory = pd.concat([shape_name_contains('sub_integrated_care_board', 'bgc'),\n",
-    "                                     shape_name_contains('sub_integrated_care_board', 'buc')\n",
+    "                                     shape_name_contains('sub_integrated_care_board', 'buc'),\n",
+    "                                     shape_name_contains('sicbl', 'buc') # 2022\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1617</th>\n",
+       "      <td>SICBL_JUL_2022_EN_BUC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/SICBL_JUL_2022_EN_BUC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       name           type  \\\n",
+       "1617  SICBL_JUL_2022_EN_BUC  FeatureServer   \n",
+       "\n",
+       "                                                                                                         url  \n",
+       "1617  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/SICBL_JUL_2022_EN_BUC/FeatureServer  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sub_icb_shape_directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SICBL_JUL_2022_EN_BUC.csv successfully saved\n"
+     ]
+    }
+   ],
    "source": [
     "# save_geojson_from_dataset_name(sub_icb_shape_directory['name'].values[0])"
    ]
@@ -349,23 +408,85 @@
     "                                  shape_name_contains(\"counties_and_unitary_authorities_december_2018\", 'gcb_ew'), # 2018\n",
     "                                  shape_name_contains('counties_and_unitary_authorities', '2020_uk_bgc'), # 2020\n",
     "                                  shape_name_contains('counties_and_unitary_authorities', 'en_buc'), # 2021\n",
+    "                                  shape_name_contains('Counties_and_Unitary_Authorities', '2011_gcb') # 2011\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2011_GCB_EW_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2011_GCB_EW_2022/FeatureServer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                           name  \\\n",
+       "203  Counties_and_Unitary_Authorities_December_2011_GCB_EW_2022   \n",
+       "\n",
+       "              type  \\\n",
+       "203  FeatureServer   \n",
+       "\n",
+       "                                                                                                                                             url  \n",
+       "203  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2011_GCB_EW_2022/FeatureServer  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "utla_shape_directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counties_and_Unitary_Authorities_December_2011_GCB_EW_2022.csv successfully saved\n"
+     ]
+    }
+   ],
    "source": [
     "# for i in utla_shape_directory['name']:\n",
     "#     # print(i)\n",
@@ -449,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -546,9 +667,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>SICBL_JUL_2022_EN_BUC_2975071620781705857.csv</td>\n",
-       "      <td>SICBL22CD</td>\n",
-       "      <td>SICBL22NM</td>\n",
+       "      <td>SICBL_JUL_2022_EN_BUC.csv</td>\n",
+       "      <td>properties.SICBL22CD</td>\n",
+       "      <td>properties.SICBL22NM</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -560,17 +681,17 @@
        "1  Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv   \n",
        "2                                          STP_Apr_2019_GCB_in_England_2022.csv   \n",
        "3                                              Regions_December_2022_EN_BUC.csv   \n",
-       "4                                 SICBL_JUL_2022_EN_BUC_2975071620781705857.csv   \n",
+       "4                                                     SICBL_JUL_2022_EN_BUC.csv   \n",
        "\n",
-       "           code_field          name_field  \n",
-       "0  properties.ICB22CD  properties.ICB22NM  \n",
-       "1  properties.STP21CD  properties.STP21NM  \n",
-       "2  properties.stp19cd  properties.stp19nm  \n",
-       "3  properties.RGN22CD  properties.RGN22NM  \n",
-       "4           SICBL22CD           SICBL22NM  "
+       "             code_field            name_field  \n",
+       "0    properties.ICB22CD    properties.ICB22NM  \n",
+       "1    properties.STP21CD    properties.STP21NM  \n",
+       "2    properties.stp19cd    properties.stp19nm  \n",
+       "3    properties.RGN22CD    properties.RGN22NM  \n",
+       "4  properties.SICBL22CD  properties.SICBL22NM  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,98 +763,7 @@
     "\n",
     "shape = shape.loc[:,cols].rename(columns=cols_dict)\n",
     "\n",
-    "shape.to_csv('2023-08-10_shapes.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>shape</th>\n",
-       "      <th>area_code</th>\n",
-       "      <th>area_type_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[[[-2.9671418349254, 53.6984478763779], [-2.97...</td>\n",
-       "      <td>E54000008_221</td>\n",
-       "      <td>221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[[[-1.83206903707898, 53.1728276266488], [-1.8...</td>\n",
-       "      <td>E54000010_221</td>\n",
-       "      <td>221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[[[-2.37893812427525, 52.891720395622], [-2.39...</td>\n",
-       "      <td>E54000011_221</td>\n",
-       "      <td>221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[[[-0.292115057436606, 53.6132674113174], [-0....</td>\n",
-       "      <td>E54000013_221</td>\n",
-       "      <td>221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[[[-0.778437532605699, 52.9593137819633], [-0....</td>\n",
-       "      <td>E54000015_221</td>\n",
-       "      <td>221</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               shape      area_code  \\\n",
-       "0  [[[-2.9671418349254, 53.6984478763779], [-2.97...  E54000008_221   \n",
-       "1  [[[-1.83206903707898, 53.1728276266488], [-1.8...  E54000010_221   \n",
-       "2  [[[-2.37893812427525, 52.891720395622], [-2.39...  E54000011_221   \n",
-       "3  [[[-0.292115057436606, 53.6132674113174], [-0....  E54000013_221   \n",
-       "4  [[[-0.778437532605699, 52.9593137819633], [-0....  E54000015_221   \n",
-       "\n",
-       "   area_type_id  \n",
-       "0           221  \n",
-       "1           221  \n",
-       "2           221  \n",
-       "3           221  \n",
-       "4           221  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shape.head()"
+    "# shape.to_csv('2023-08-10_shapes.csv', index=False)"
    ]
   },
   {
