test why 102 doesn't load into qlik

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shape_file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ICB_JUL_2022_EN_BUC_V3.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>STP_Apr_2019_GCB_in_England_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Regions_December_2022_EN_BUC.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SICBL_JUL_2022_EN_BUC.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CCG_Apr_2018_UGCB_in_England_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CCG_Apr_2017_UGCB_in_England_V4_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Local_Authority_Districts_December_2021_UK_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Local_Authority_Districts_December_2020_UK_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Local_Authority_Districts_April_2019_UK_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>LAD_December_2018_Boundaries_UK_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                           shape_file\n",
+       "0                                                          ICB_JUL_2022_EN_BUC_V3.csv\n",
+       "1        Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv\n",
+       "2                                                STP_Apr_2019_GCB_in_England_2022.csv\n",
+       "4                                                    Regions_December_2022_EN_BUC.csv\n",
+       "5                                                           SICBL_JUL_2022_EN_BUC.csv\n",
+       "6                            Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv\n",
+       "7   Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv\n",
+       "8                 Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv\n",
+       "9                                               CCG_Apr_2018_UGCB_in_England_2022.csv\n",
+       "10                                           CCG_Apr_2017_UGCB_in_England_V4_2022.csv\n",
+       "11                            Local_Authority_Districts_December_2021_UK_BUC_2022.csv\n",
+       "12                            Local_Authority_Districts_December_2020_UK_BUC_2022.csv\n",
+       "13                               Local_Authority_Districts_April_2019_UK_BUC_2022.csv\n",
+       "14                                       LAD_December_2018_Boundaries_UK_BUC_2022.csv\n",
+       "15                          Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv\n",
+       "16                     Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv\n",
+       "17             Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv\n",
+       "18                     Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files_required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +828,7 @@
        "4  properties.SICBL22CD  properties.SICBL22NM  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,6 +902,22 @@
     "\n",
     "# shape.to_csv('2023-08-10_shapes.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape.loc[shape.loc[:,'area_type_id']==102].to_csv('102_test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
